# miniKanren-ocaml-typed

./: .gitignore  .merlin  META  META.OCanren.template  Makefile  OCanren.opam  README.md  _tags  dune  index.md  myocamlbuild.ml  test.sh  z3demo.ml
.github/workflows/: blank.yml
OCanren/OCanren/: index.html
OCanren/OCanren/Stream/: index.html
OCanren/OCanren/class-type-reified/: index.html
OCanren/OCanren__/Bool/: index.html
OCanren/OCanren__/Core/: index.html
OCanren/OCanren__/Core/Fresh/: index.html
OCanren/OCanren__/Core/Tabling/: index.html
OCanren/OCanren__/List/: index.html
OCanren/OCanren__/Logic/: index.html
OCanren/OCanren__/Logic/class-type-reified/: index.html
OCanren/OCanren__/Nat/: index.html
OCanren/OCanren__/Option/: index.html
OCanren/OCanren__/Pair/: index.html
OCanren/OCanren__/Stream/: index.html
OCanren/OCanren__/Subst/: index.html
OCanren/OCanren__Bool/: index.html
OCanren/OCanren__Core/: index.html
OCanren/OCanren__Core/Fresh/: index.html
OCanren/OCanren__Core/Tabling/: index.html
OCanren/OCanren__List/: index.html
OCanren/OCanren__Logic/: index.html
OCanren/OCanren__Logic/class-type-reified/: index.html
OCanren/OCanren__Nat/: index.html
OCanren/OCanren__Option/: index.html
OCanren/OCanren__Pair/: index.html
OCanren/OCanren__Stream/: index.html
OCanren/OCanren__Subst/: index.html
OCanren/Pa_ocanren/: index.html
camlp5/: dune  pa_ocanren.ml
config/: discover.ml  dune  tests.dune.tpl
ppx/: .merlin  pa_minikanren_bin.ml  ppx_fresh.ml  ppx_ocanren_all.ml  ppx_repr.ml  smart_logger.ml
ppx/fresh/: ppx_fresh.ml
regression/: dune.tests  test014.ml  test015runaway.ml  test019presb.ml  test021.ml  test021structural.ml  test022.ml  test022fcpats.ml  test022minimize.ml  test023.ml  test023len.ml  test023parsing.ml  test030fd.ml  test031mc.ml  tests.dune  tests.txt
regression/orig/: test021structural.orig  test022fcpats.orig  test022minimize.orig
samples/: Makefile  WGC.ml  dune  fd.ml  len.ml  lorry.ml  sorting.ml
src/: MiniKanren.ml  MiniKanren.mli  MiniKanrenCore.ml  MiniKanrenCore.mli  MiniKanrenStd.ml  MiniKanrenStd.mli  OCanren.ml  dune  libunify.clib  unif.c
src/core/: Core.ml  Core.mli  Disequality.ml  Disequality.mli  FM.ml  FM.mli  Logic.ml  Logic.mli  Pattern0.ml  Stream.ml  Subst.ml  Subst.mli  Term.ml  Term.mli  VarSubst.ml  VarSubst.mli
src/std/: LPair.mli  List.ml  List.mli  Pair.ml  Pair.mli
transl/: genmain.cppo.ml  smart_mapper.ml
transl/samples/: pats.ml2mk.ml  pats_run.ml
