(executables
  (names tree sorting WGC fd)
  (libraries GT OCanren benchmark OCanren.tester)
  (preprocess (action
    (run %{project_root}/camlp5/pp5+gt+plugins+ocanren+logger+o.byte  %{input-file})
  ))
  (preprocessor_deps (file %{project_root}/camlp5/pp5+gt+plugins+ocanren+logger+o.byte))
)

(alias
  (name samples)
  (deps tree.exe sorting.exe WGC.exe lorry.exe fd.exe)
)
