(include_subdirs unqualified)

(library
  (name OCanren)
  (public_name OCanren)
  (libraries GT)
  (preprocess
    (action
      (run camlp5
        %{read-lines:../config/camlp5-flags.cfg}
        %{read-lines:../config/gt-flags.cfg}
        %{input-file})
    )
  )
)

(rule
 (targets pp5.byte)
 (deps    %{workspace_root}/camlp5/pa_ocanren.cma)
 (action  (run mkcamlp5
             %{read-lines:../config/camlp5-flags.cfg}
             %{read-lines:../config/gt-flags.cfg}
             %{read-lines:../config/logger-flags.cfg}
             %{workspace_root}/camlp5/pa_ocanren.cma
             -o %{targets}
             ))
)
